# ImageCrypt

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO
containers/: Dockerfile-build-archlinux_latest  Dockerfile-build-centos_latest  Dockerfile-build-clearlinux_latest  Dockerfile-build-debian_latest  Dockerfile-build-fedora_latest  Dockerfile-build-mageia_7  Dockerfile-build-ubuntu_19_10  Dockerfile-build-ubuntu_20_04  Dockerfile-deploy-archlinux_latest  Dockerfile-deploy-centos_latest  Dockerfile-deploy-clearlinux_latest  Dockerfile-deploy-debian_latest  Dockerfile-deploy-fedora_latest  Dockerfile-deploy-mageia_7  Dockerfile-deploy-ubuntu_19_10  Dockerfile-deploy-ubuntu_20_04
doc/: CMakeLists.txt  cyclic_redundancy_check.md  design_in_pseudocode  encryption.md  endian.md  faq.md  frequently_asked_questions.md  imagecrypt.1  nikon_electronic_format.md  portable_network_graphics.md  rpm-changelog  state_machine_design
doc/third_party_licenses/: format_preserving_encryption  libpng  openssl
scripts/: build_container_images.sh  build_fedora_rpm.sh  build_generic.sh
src/: CMakeLists.txt  cli.c  cryptography.c  cryptography.h  determine_format.c  determine_format.h  png.c  png.h  user_input_handling.c  user_input_handling.h
src/tools/: CMakeLists.txt  crc32.c  crc32.h  cryptography.c  cryptography.h  enhanced_string.c  enhanced_string.h  fpe.c  fpe.h  safety.c  safety.h  status.h  string_collection.c  string_collection.h  transform_details.c  transform_details.h
tests/: CMakeLists.txt  Makefile  crc32_test.c  cryptography_test.c  enhanced_string_test.c  ff1_test.c  fpe_test.c  string_collection_test.c
